--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <p id="yo"> yo yo yo yo yo yo yo </p>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   <script>
-    $("#yo").append("hey hey hey hey!!!!!");
+    $('#yo').prepend('<img id="theImg" src="theImg.png" />')
   </script>
 
   
